Fix inline list spacing

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -80,13 +80,16 @@ ul.bullet li::before {
 	left: -1rem;
 }
 
+ul.inline {
+	display: flex;
+}
 ul.inline li {
 	display: inline-block;
 }
 ul.inline li:not(:first-child) {
 	border-left: 1px solid var(--color-line);
-	margin-left: 0.5rem;
-	padding-left: 0.5rem;
+	margin-left: 0.75rem;
+	padding-left: 0.75rem;
 }
 
 .date {
